moves files around

--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -12,7 +12,7 @@
 			rel="stylesheet"
 			href="{{url_for('static', filename='styles.css')}}"
 		/> -->
-		<link rel="stylesheet" href="../static/styles.css" />
+		<link rel="stylesheet" href="../static/css/styles.css" />
 		<title>Welcome Page</title>
 	</head>
 	<body>
