--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 			rel="stylesheet"
 			href="{{url_for('static', filename='styles.css')}}"
 		/> -->
-		<link rel="stylesheet" href="../static/styles.css" />
+		<link rel="stylesheet" href="../static/css/styles.css" />
 
 		<title>Main</title>
 	</head>
