--- a/templates/manifest-input.html
+++ b/templates/manifest-input.html
@@ -12,7 +12,7 @@
 			rel="stylesheet"
 			href="{{url_for('static', filename='styles.css')}}"
 		/> -->
-		<link rel="stylesheet" href="../static/styles.css" />
+		<link rel="stylesheet" href="../static/css/styles.css" />
 
 		<title>Manifest Input</title>
 	</head>
@@ -37,7 +37,7 @@
 			<div class="hero-body">
 				<div class="container has-text-centered">
 					<div class="column">
-						<a href="landing.html"
+						<a href="http://127.0.0.1:5000/"
 							><button
 								id="upload-quit-btn"
 								class="button is-large quit-btn"
@@ -49,7 +49,7 @@
 				</div>
 				<div class="container has-text-centered">
 					<div class="column">
-						<a href="index.html"
+						<a href="http://127.0.0.1:5000/main"
 							><button
 								id="upload-cont-btn"
 								class="button is-success is-large cont-btn"
