--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -8,11 +8,10 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
 		/>
-		<!-- <link
+		<link
 			rel="stylesheet"
 			href="{{url_for('static', filename='styles.css')}}"
-		/> -->
-		<link rel="stylesheet" href="../static/styles.css" />
+		/>
 		<title>Welcome Page</title>
 	</head>
 	<body>
@@ -41,7 +40,6 @@
 						<button id="submit-btn" class="button is-large mt-4">
 							Sign In
 						</button>
-						<!-- </a> -->
 					</form>
 				</div>
 			</div>
