--- a/templates/manifest-input.html
+++ b/templates/manifest-input.html
@@ -37,20 +37,24 @@
 				<div class="container">
 					<div id="file-upload" class="file has-name is-boxed">
 						<label class="file-label">
-							<input
-								class="file-input"
-								type="file"
-								name="manifest"
-							/>
-							<span class="file-cta">
-								<span class="file-icon">
-									<i class="fas fa-upload"></i>
+							<form action="">
+								<input
+									class="file-input"
+									type="file"
+									name="manifest"
+								/>
+								<span class="file-cta">
+									<span class="file-icon">
+										<i class="fas fa-upload"></i>
+									</span>
+									<span class="file-label">
+										Choose a file…
+									</span>
 								</span>
-								<span class="file-label"> Choose a file… </span>
-							</span>
-							<span class="file-name has-text-centered">
-								No file uploaded
-							</span>
+								<span class="file-name has-text-centered">
+									No file uploaded
+								</span>
+							</form>
 						</label>
 					</div>
 				</div>
