--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -8,10 +8,7 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
 		/>
-		<link
-			rel="stylesheet"
-			href="{{url_for('static', filename='styles.css')}}"
-		/>
+		<link rel="stylesheet" href="../static/css/styles.css" />
 		<title>Welcome Page</title>
 	</head>
 	<body>
@@ -40,6 +37,7 @@
 						<button id="submit-btn" class="button is-large mt-4">
 							Sign In
 						</button>
+						<!-- </a> -->
 					</form>
 				</div>
 			</div>
