--- a/templates/index.html
+++ b/templates/index.html
@@ -8,18 +8,8 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
 		/>
-		<!-- <link
-			rel="stylesheet"
-			href="{{url_for('static', filename='styles.css')}}"
-		/>
-		<link
-			rel="stylesheet"
-			href="{{url_for('static', filename='modal.js')}}"
-		/> -->
-
-		<!-- testing -->
-		<link rel="stylesheet" href="../static/styles.css" />
-		<script src="../static/modal.js" async></script>
+		<link rel="stylesheet" href="../static/css/styles.css" />
+		<script src="../static/js/modal.js" async></script>
 
 		<title>Main</title>
 	</head>
