--- a/templates/manifest-input.html
+++ b/templates/manifest-input.html
@@ -8,11 +8,7 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
 		/>
-		<link
-			rel="stylesheet"
-			href="{{url_for('static', filename='styles.css')}}"
-		/>
-		<!-- <link rel="stylesheet" href="../static/styles.css" /> -->
+		<link rel="stylesheet" href="../static/css/styles.css" />
 		<script
 			defer
 			src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
@@ -64,13 +60,8 @@
 			<div class="hero-body">
 				<div class="container has-text-centered">
 					<div class="column">
-<<<<<<< HEAD
-						<a href="http://127.0.0.1:5000/"
-							><button
-=======
 						<a href="{{ url_for('landing_page') }}">
 							<button
->>>>>>> 20e1a41ad04c3cbdf9cc5823788436a946209b48
 								id="upload-quit-btn"
 								class="button is-large quit-btn"
 								name="manifest-quit"
@@ -82,13 +73,8 @@
 				</div>
 				<div class="container has-text-centered">
 					<div class="column">
-<<<<<<< HEAD
-						<a href="http://127.0.0.1:5000/main"
-							><button
-=======
 						<form action="#" method="post">
 							<button
->>>>>>> 20e1a41ad04c3cbdf9cc5823788436a946209b48
 								id="upload-cont-btn"
 								class="button is-success is-large cont-btn"
 								name="manifest-continue"
