--- a/templates/index.html
+++ b/templates/index.html
@@ -29,11 +29,22 @@
 							>
 								<p>Manifest</p>
 								<div class="navbar-dropdown">
-									<a
-										class="navbar-item is-size-5 has-text-centered"
+									<form
+										id="download-manifest-form"
+										action="#"
+										method="post"
 									>
-										Download outbound manifest
-									</a>
+										<input
+											type="hidden"
+											name="download-manifest"
+										/>
+										<a
+											class="navbar-item is-size-5 has-text-centered"
+											onclick="download_manifest()"
+										>
+											Download outbound manifest
+										</a>
+									</form>
 									<a
 										href="{{ url_for('manifest_input_page') }}"
 										class="navbar-item is-size-5 has-text-centered"
@@ -88,7 +99,11 @@
 					>
 						Confirm
 					</button>
-					<button id="balance-button" class="button is-large my-6">
+					<button
+						data-modal-target="#balanced-modal"
+						id="balance-button"
+						class="button is-large my-6"
+					>
 						Balance
 					</button>
 				</section>
@@ -107,36 +122,24 @@
 						aria-label="close"
 					></button>
 				</header>
-				<section class="modal-card-body has-text-black">
-					<textarea
-						class="textarea"
-						placeholder="e.g. Container weighs less than expected"
-					></textarea>
-				</section>
-				<footer class="modal-card-foot">
-					<button class="button is-success">Submit</button>
-				</footer>
-			</div>
-		</div>
-
-		<div id="finish-modal" class="modal">
-			<div class="modal-background"></div>
-			<div class="modal-card">
-				<header
-					class="modal-card-head has-background-warning reminder-head"
-				>
-					<p class="modal-card-title">Reminder</p>
-					<button
-						data-close-button
-						class="delete"
-						aria-label="close"
-					></button>
-				</header>
-				<section class="modal-card-body has-text-black reminder-body">
-					<p class="modal-card-title is-size-4 has-text-centered">
-						Download and send out outbound manifest
-					</p>
-				</section>
+				<form action="#" method="post">
+					<section class="modal-card-body has-text-black">
+						<textarea
+							class="textarea"
+							name="operator-log-entry"
+							placeholder="e.g. Container weighs less than expected"
+						></textarea>
+					</section>
+					<footer class="modal-card-foot">
+						<button
+							data-close-button
+							type="submit"
+							class="button is-success"
+						>
+							Submit
+						</button>
+					</footer>
+				</form>
 			</div>
 		</div>
 
@@ -153,38 +156,93 @@
 						aria-label="close"
 					></button>
 				</header>
-				<section class="modal-card-body has-text-black">
-					<form action="">
+				<form action="#" method="post">
+					<section class="modal-card-body has-text-black">
 						<input
 							class="input is-medium"
 							type="number"
-							min="0"
-							min="99999"
+							name="weight-entry"
 							placeholder="Container Weight (0 - 99999)"
 						/>
-					</form>
-				</section>
-				<footer class="modal-card-foot">
-					<button class="button is-success">Enter</button>
-				</footer>
+					</section>
+					<footer class="modal-card-foot">
+						<button data-close-button class="button is-success">
+							Enter
+						</button>
+					</footer>
+				</form>
+			</div>
+		</div>
+
+		<div id="finish-modal" class="modal">
+			<div class="modal-background"></div>
+			<div class="modal-card">
+				<form action="#" method="post">
+					<header
+						class="modal-card-head has-background-warning reminder-head"
+					>
+						<p class="modal-card-title">Reminder</p>
+						<button
+							data-close-button
+							class="delete"
+							aria-label="close"
+						></button>
+					</header>
+					<section class="modal-card-body has-text-black">
+						<p class="modal-card-title is-size-4 has-text-centered">
+							Download and send out outbound manifest
+						</p>
+						<input type="hidden" name="finish-cycle" />
+					</section>
+					<footer class="modal-card-foot">
+						<button
+							data-close-button
+							type="submit"
+							class="button is-success"
+						>
+							Got it
+						</button>
+					</footer>
+				</form>
 			</div>
 		</div>
 
 		<div id="balanced-modal" class="modal">
 			<div class="modal-background"></div>
 			<div class="modal-card">
-				<header
-					class="modal-card-head has-background-primary reminder-head"
-				>
-					<p class="modal-card-title">Notification</p>
-					<button class="delete" aria-label="close"></button>
-				</header>
-				<section class="modal-card-body has-text-black reminder-body">
-					<p class="modal-card-title is-size-4 has-text-centered">
-						Ship is balanced!
-					</p>
-				</section>
+				<form action="#" method="post">
+					<header
+						class="modal-card-head has-background-primary reminder-head"
+					>
+						<p class="modal-card-title">Notification</p>
+						<input type="hidden" name="balanced-ship" />
+						<button
+							data-close-button
+							class="delete"
+							aria-label="close"
+						></button>
+					</header>
+					<section class="modal-card-body has-text-black">
+						<p class="modal-card-title is-size-4 has-text-centered">
+							Ship is balanced!
+						</p>
+					</section>
+					<footer class="modal-card-foot">
+						<button
+							data-close-button
+							type="Got it"
+							class="button is-success"
+						>
+							Got it
+						</button>
+					</footer>
+				</form>
 			</div>
 		</div>
+		<script>
+			function download_manifest() {
+				document.getElementById("download-manifest-form").submit();
+			}
+		</script>
 	</body>
 </html>
