--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 		/>
 		<link rel="stylesheet" href="../static/css/styles.css" />
 		<script src="../static/js/modal.js" async></script>
+		<script src="../static/js/index.js"></script>
 
 		<title>Main</title>
 	</head>
@@ -107,7 +108,23 @@
 						Balance
 					</button>
 				</section>
+
+				<div class="grid" id="grid"></div>
+
+				<div class="right-side-bar">
+					<div class="time-info-box">
+						<div>Total Est. Time: </div>
+						<div>Est. Time: </div>
+					</div>
+					<div class="move-info-box">
+						<div>Empty Box For Steps</div>
+					</div>
+				</div>
+
 			</section>
+
+			<div class="buffer-grid" id="buffer-grid"></div>
+
 		</section>
 
 		<!-- Modals-->
