changed quit button to not submit post request

--- a/templates/manifest-input.html
+++ b/templates/manifest-input.html
@@ -66,6 +66,7 @@
 								<button
 									id="upload-quit-btn"
 									class="button is-large quit-btn"
+                                    type="button"
 									name="manifest-quit"
 								>
 									Quit
