modals work now, added defer attribute to scripts

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 			href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
 		/>
 		<link rel="stylesheet" href="../static/css/styles.css" />
-		<script src="../static/js/modal.js" async></script>
-		<script src="../static/js/index.js"></script>
+		<script src="../static/js/index.js" defer></script>
+		<script src="../static/js/modal.js" defer></script>
 
 		<title>Main</title>
 	</head>
