adds moves to table and highlights the move, also added next button and clicking functionality

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -172,3 +172,16 @@ btn {
     margin-top: 0;
     
 }
+
+#next-button {
+    position: absolute;
+    bottom: 150px;
+    margin-left: 50px;
+    width: 120px;
+    height: 50px;
+    background-color: rgb(163, 163, 163);
+}
+
+.highlight {
+    background-color: #ff00bf;
+}
