--- a/templates/index.html
+++ b/templates/index.html
@@ -112,11 +112,18 @@
 
 				<div class="right-side-bar">
 					<div class="time-info-box">
-						<div id="total-time">Total Est. Time:</div>
-						<div id="curr-time">Est. Time:</div>
+						<div id="total-time">Total Est. Time: 0 minutes</div>
+						<div id="curr-time">Est. Time: 0 minutes</div>
 					</div>
 					<div class="move-info-box" id ="move-info-box">
-						
+						<div class="moves" id ="moves">
+						</div>
+						<button
+							id="next-button"
+							class="button is-large my-6"
+						>
+							Next
+					</button>
 					</div>
 				</div>
 			</section>
