--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -138,7 +138,7 @@ btn {
     height: 520px;
     margin: 0 auto;
     padding: 10px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -182,6 +182,10 @@ btn {
     background-color: rgb(163, 163, 163);
 }
 
-.highlight {
+.highlight-1 {
     background-color: #ff00bf;
+}
+
+.highlight-2 {
+    background-color: #FFFF00;
 }
