reformated next button

--- a/templates/index.html
+++ b/templates/index.html
@@ -116,14 +116,15 @@
 						<div id="curr-time">Est. Time: 0 minutes</div>
 					</div>
 					<div class="move-info-box" id ="move-info-box">
-						<div class="moves" id ="moves">
+						<div class="moves" id ="moves"></div>
+						<div id="next-button-holder">
+							<button
+								id="next-button"
+								class="button is-large my-6"
+								>
+								Next
+							</button>
 						</div>
-						<button
-							id="next-button"
-							class="button is-large my-6"
-						>
-							Next
-					</button>
 					</div>
 				</div>
 			</section>
