--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -173,11 +173,16 @@ btn {
     
 }
 
+.moves {
+    height: 77%;
+}
+
+#next-button-holder {
+    text-align: center;
+}
+
 #next-button {
-    position: absolute;
-    bottom: 150px;
-    margin-left: 50px;
-    width: 120px;
+    width: 140px;
     height: 50px;
     background-color: rgb(163, 163, 163);
 }
