--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -114,6 +114,10 @@ btn {
     font-weight: bold;
 }
 
+.grid>div>div:hover {
+    background-color: rgb(0, 201, 100);
+}
+
 .right-side-bar {
     height: 100%;
     width: 250px;
@@ -166,6 +170,14 @@ btn {
     background-color: #ffffff;
 }
 
+.buffer-grid>div>div:hover {
+    background-color: rgb(0, 201, 100);
+}
+
+.buffer-grid>div>.highlight-3 {
+    background-color: rgb(0, 201, 100);
+}
+
 .hero-body {
     padding: 0;
     margin: auto;
@@ -193,4 +205,12 @@ btn {
 
 .highlight-2 {
     background-color: #FFFF00;
+}
+
+.grid>div>.highlight-3 {
+    background-color: rgb(0, 201, 100);
+}
+
+#cell-info {
+    font-size: 20px;
 }
